# lindas-foen-fetcher

./: AGENT.md  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
src/: config.rs  database.rs  display.rs  gfroerli.rs  main.rs  parsing.rs  sparql.rs
