[package]
name = "lindas-foen-fetcher"
description = "Fetch water temperature measurements from the BAFU/FOEN LINDAS endpoint and forward it to the Gfrörli database."
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
